Fix file SecurityConfig